libs/wingc/src/lsp/snapshots/hovers/bring_library.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "Module '@winglang/sdk'"
range:
  start:
    line: 1
    character: 25
  end:
    line: 1
    character: 28

