libs/wingc/src/lsp/snapshots/hovers/builtin_in_inflight.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nthrow: (message: str): void\n```\n---\nthrows an error\n\n### Parameters\n- `message` — The message to throw"
range:
  start:
    line: 3
    character: 4
  end:
    line: 3
    character: 9

