libs/wingc/src/lsp/snapshots/hovers/builtin_in_preflight.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nassert: (condition: bool): void\n```\n---\nAsserts that a condition is true\n\n### Parameters\n- `condition` — The condition to assert"
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 6

