libs/wingc/src/lsp/snapshots/hovers/builtin_instance_method.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "Does this string start with the given searchString?\n\n### Parameters\n - *searchString* - substring to search for.\n\n### Returns\ntrue if string starts with searchString."
range:
  start:
    line: 1
    character: 8
  end:
    line: 1
    character: 18

