libs/wingc/src/lsp/snapshots/hovers/class_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo {\n  // No public members\n}\n```\n---\n Class doc"
range:
  start:
    line: 2
    character: 8
  end:
    line: 2
    character: 11

