libs/wingc/src/lsp/snapshots/hovers/class_doc_with_multiline_and_markdown.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo\n```\n---\n Class doc\n With multiline\n ## And markdown\n\n### Fields\n- `a` — `num`\n- `node` — `Node` — The tree node.\n### Methods\n- `isConstruct` — `preflight (x: any): bool` — Checks if `x` is a construct.\n- `onLift` — `preflight (host: IInflightHost, ops: Array<str>): void` — A hook called by the Wing compiler once for each inflight host that needs to use this resource inflight.\n- `onLiftType` — `preflight (host: IInflightHost, ops: Array<str>): void` — A hook called by the Wing compiler once for each inflight host that needs to use this type inflight.\n- `toInflight` — `preflight (obj: IResource): str` — Generates an asynchronous JavaScript statement which can be used to create an inflight client for a resource.\n- `toString` — `preflight (): str` — Returns a string representation of this construct."
range:
  start:
    line: 4
    character: 8
  end:
    line: 4
    character: 11

