libs/wingc/src/lsp/snapshots/hovers/class_field_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight field: num\n```\n---\n Class field doc"
range:
  start:
    line: 3
    character: 4
  end:
    line: 3
    character: 9

