libs/wingc/src/lsp/snapshots/hovers/class_init_this_field.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight stuff: num\n```"
range:
  start:
    line: 5
    character: 9
  end:
    line: 5
    character: 14

