libs/wingc/src/lsp/snapshots/hovers/class_method_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight do(): void\n```\n---\n Class method doc"
range:
  start:
    line: 3
    character: 4
  end:
    line: 3
    character: 6

