libs/wingc/src/lsp/snapshots/hovers/class_symbol.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight bucket: Bucket\n```\n---\n```wing\nclass Bucket\n```\n---\nA cloud object store."
range:
  start:
    line: 3
    character: 6
  end:
    line: 3
    character: 12

